[project]
name = "pytokens"
version = "0.4.1"
description = "A Fast, spec compliant Python 3.14+ tokenizer that runs on older Pythons."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [{ name = "Tushar Sadhwani", email = "tushar.sadhwani000@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
urls = { Homepage = "https://github.com/tusharsadhwani/pytokens" }

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "mypy",
  "pytest",
  "pytest-cov",
  "setuptools",
  "tox",
  "twine",
  "wheel",
]

[build-system]
requires = ["setuptools>=69", "wheel", "mypy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.mypy]
strict = true
exclude = "setup.py|venv|build"

[tool.cibuildwheel]
build-frontend = "build"
linux.manylinux-x86_64-image = "manylinux_2_28"
linux.manylinux-aarch64-image = "manylinux_2_28"
linux.musllinux-x86_64-image = "musllinux_1_2"
linux.musllinux-aarch64-image = "musllinux_1_2"

enable = []

skip = ["cp313t-*", "*-win32", "*-musllinux_aarch64"]

[tool.cibuildwheel.environment]
MYPYC_OPT_LEVEL = "3"
MYPYC_DEBUG_LEVEL = "0"
