[metadata]
name = pytokens
version = 0.1.2
description = A Fast, spec compliant Python 3.12+ tokenizer that runs on older Pythons.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/pytokens
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    pytokens=pytokens.cli:cli

[options.extras_require]
dev =
    black
    build
    mypy
    pytest
    pytest-cov
    setuptools
    tox
    twine
    wheel

[options.package_data]
pytokens =
    py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
